Fix steps button alignment

--- a/bc/static_src/sass/components/_promo-steps.scss
+++ b/bc/static_src/sass/components/_promo-steps.scss
@@ -5,10 +5,6 @@
             display: flex;
             flex-direction: column;
 
-            &__controls {
-                align-self: flex-end;
-            }
-
             &__circle {
                 color: $color--black;
                 background-color: $color--promo-light-purple;
